css/style.css
/*-- -------------------------- -->
<---           LANDING          -->
<--- -------------------------- -*/

#hero {
    height: 650px;
    width: 100%;
    background: url("../images/yellow-house-mobile.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    color: #fff;
    position: relative;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: start;
        -ms-flex-pack: start;
            justify-content: flex-start;
}

#dark {
    position: absolute;
    height: 100%;
    width: 100%;
    background: #000;
    opacity: 0.67;
    z-index: 2;
    -webkit-transition: .3s ease;
    -o-transition: .3s ease;
    transition: .3s ease;
}

.heroText {
	padding-top: 0;
    position: relative;
    z-index: 3;
    height: auto;
    margin-left: 0;
}

.heroText h1 {
	font-size: 2.2em;
	color: #fff;
	text-align: left;
	font-weight: bold;
	overflow-y: hidden;
    margin: 0;
}

.heroText h2 {
	color: #fff;
	font-size: 1em;
	text-align: left;
	line-height: 1.6em;
    padding: 30px 0;
    position: relative;
    font-weight: normal;
}

.heroText h2:before {
    content: '';
    position: absolute;
    width: 60px;
    height: 5px;
    background: var(--primary);
    top: 12px;
}

.about-button, .quote-button {
    width: 188px;
}

.white-comb {
    display: none;
}

.dark-comb {
    display: none;
}

.quote-button {
    color: #000;
}

body {
    position: fixed;
}

body.clicked {
    position: relative;
}

.pop-up {
    position: absolute;
    z-index: 100;
    width: 100%;
    top: -60px;
    -webkit-transition: .1s ease-in-out;
    -o-transition: .1s ease-in-out;
    transition: .1s ease-in-out;
    -webkit-animation-name: popUp;
            animation-name: popUp;
    -webkit-animation-duration: .4s;
            animation-duration: .4s;
    -webkit-animation-timing-function: ease-in;
            animation-timing-function: ease-in;
    -webkit-animation-fill-mode: forwards;
            animation-fill-mode: forwards;
    -webkit-animation-direction: normal;
            animation-direction: normal;
}

@-webkit-keyframes popUp {
    0% {
        visibility: hidden;
        -webkit-transform: rotateY(90deg);
                transform: rotateY(90deg);
    }

    100% {
        visibility: visible;
        -webkit-transform: rotateY(0deg);
                transform: rotateY(0deg);
    }
}

@keyframes popUp {
    0% {
        visibility: hidden;
        -webkit-transform: rotateY(90deg);
                transform: rotateY(90deg);
    }

    100% {
        visibility: visible;
        -webkit-transform: rotateY(0deg);
                transform: rotateY(0deg);
    }
}

.pop-up.clicked {
    opacity: 0;
    visibility: hidden;
    -webkit-transition: .3s ease-in-out;
    -o-transition: .3s ease-in-out;
    transition: .3s ease-in-out;
}

.dark2.clicked {
    opacity: 0;
    visibility: hidden;
    -webkit-transition: .3s ease-in-out;
    -o-transition: .3s ease-in-out;
    transition: .3s ease-in-out;
}

.pop-up h3 {
    color: var(--primary);
    text-align: center;
    font-size: 2.5em;
    margin-bottom: 20px;
}

.pop-up-logo {
    width: 60%;
    max-width: 400px;
    display: block;
    margin: auto;
    margin-bottom: 20px;
}

.images img {
    display: block;
    width: 80%;
    max-width: 400px;
    margin: auto;
}

.close {
    display: block;
    margin: auto;
    margin-top: 20px;
}

.dark2 {
    position: absolute;
    width: 100%;
    top: -100px;
    bottom: -1100px;
    left: 0;
    background: #000;
    opacity: .87;
    z-index: 99;
    -webkit-transition: .3s ease-in-out;
    -o-transition: .3s ease-in-out;
    transition: .3s ease-in-out;
}

@-webkit-keyframes dark2 {
    0% {
        opacity: 0;
        visibility: hidden;
    }

    100% {
        opacity: .87;
        visibility: visible;
    }
}

@keyframes dark2 {
    0% {
        opacity: 0;
        visibility: hidden;
    }

    100% {
        opacity: .87;
        visibility: visible;
    }
}

.close {
    display: block;
    margin: auto;
    margin-top: 30px;
}

/*-- -------------------------- -->
<---           SERVICE          -->
<--- -------------------------- -*/

#customer-service {
    position: relative;
}

/* Floating Box */
.floating-box {
    background: #252525;
}

.box-item {
    padding-top: 50px;
    padding-bottom: 50px;
    border-bottom: 1px solid rgba(250,250,250, .3);
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    width: 100%
}

.box-content {
    width: 175px;
}

.box-item p {
    color: #f5f3f3;
}

.box-item p:nth-child(1) {
    text-transform: uppercase;
    font-size: 16px;
}

.box-item p:nth-child(2), .box-item p:nth-child(2) {
    font-size: 0.875em;
}

.box-item svg {
    width: 40px;
    height: 100px;
    height: auto;
    float: left;
    margin-right: 40px;
}

.first-box p:nth-child(1) {
    margin-bottom: 5px;
    font-size: 0.875em;
    text-transform: initial;
}

.first-box a {
    color: var(--primary);
    font-size: 1.2625em;
    font-weight: 900;
    text-decoration: none;
}

/* Main Content */
.service-h2 {
    margin-top: 50px;
    margin-bottom: 30px;
    text-align: center;
    font-weight: 900;
    font-size: 2.5em;
}

.service-h2 span {
    color: var(--primary);
}

.service-p {
    text-align: center;
    margin-bottom: 50px;
}

.icon-container {
    padding: 0 36px;
    padding-bottom: 30px;
    max-width: 1250px;
}
/* ... */

